# conductor-ai

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.conductor/agents/: pe-assess.md  pe-discover.md  pe-extract.md  pe-implement.md  pe-onboard.md  plan-failure-report.md  plan-ticket.md
.conductor/workflows/: bsg-pattern-sync.wf  extract-patterns.wf  implement-patterns.wf  ticket-to-plan.wf
conductor-cli/: Cargo.toml
conductor-cli/src/: background.rs  main.rs  mcp.rs
conductor-core/src/: agent.rs  agent_config.rs  agent_runtime.rs  config.rs  notify.rs  orchestrator.rs  pr_review.rs  repo.rs  tickets.rs  workflow.rs  workflow_dsl.rs  workflow_ephemeral.rs  worktree.rs
conductor-service/: Cargo.toml
conductor-service/src/: main.rs
conductor-tui/src/: app.rs  background.rs  input.rs  main.rs  pe_status.rs  state.rs
conductor-tui/tests/: tui_snapshots.rs
docs/: BSG_INTEGRATION.md  README.md  roadmap.md
docs/architecture/: agent-execution.md  crate-structure.md  structured-output.md  workflow-engine.md
docs/archive/: exploration-report.md  vision-v1.md
docs/context/: CONTEXT_SUMMARY.md
docs/how-to/: getting-started-cli.md  manage-repos.md  use-worktrees.md  write-workflow.md
docs/reference/: cli-commands.md  configuration.md  database-schema.md  mcp-tools.md  output-schemas.md  themes.md  workflow-dsl.md
docs/rfc/: 002-workflow-targets.md  003-workflow-run-path-flag.md  004-conductor-claude-code-experience.md  005-diagram-workflows.md
docs/workflow/: agent-path-resolution.md  engine.md  multi-runtime-agents.md  prompt-snippets.md
(+40 files in other folders)
