[package]
name = "conductor-service"
version = "0.1.0"
edition = "2021"
description = "Conductor daemon — event-driven cross-repo coordination"

[dependencies]
conductor-core = { path = "../conductor-core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
dirs = "5"
